--- a/index.html
+++ b/index.html
@@ -140,6 +140,11 @@
       margin-top: 10px;
       margin-right: 10px;
     }
+
+    #highestVotes {
+      margin-top: 10px;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
@@ -173,6 +178,7 @@
         <option value="" disabled selected>Select a song to vote</option>
       </select>
       <ul id="voteList"></ul>
+      <div id="highestVotes"></div>
     </div>
 
     <div id="visualizer-container">
@@ -196,147 +202,78 @@
   </div>
 
   <script>
-    document.addEventListener("DOMContentLoaded", function() {
-      var musicPlayer = document.getElementById("musicPlayer");
-      var playlistButtonsContainer = document.getElementById("playlistButtons");
-      var visualizerContainer = document.getElementById("visualizer-container");
-      var voteDropdown = document.getElementById("voteDropdown");
-      var voteList = document.getElementById("voteList");
+    var voteList = document.getElementById("voteList");
+    var voteDropdown = document.getElementById("voteDropdown");
+    var highestVotesContainer = document.getElementById("highestVotes");
 
-      var playlist = [
-        {
-          name: 'Ghost',
-          artist: 'Internet Child',
-          url: 'dnb.mp3',
-          cover: 'aOYd0JMr0CnEPDinqfKE--1--c3x2d.jpg',
-        },
-        {
-          name: 'Function',
-          artist: 'Internet Child',
-          url: 'kast.mp3',
-          cover: 'DJ logo Photo.jpg',
-        },
-        {
-          name: 'Throw some Ds',
-          artist: 'Internet Child',
-          url: 'Throw Some Ds- Track 1.mp3',
-          cover: 'DJ logo Photo.jpg',
-        },
-        // Add more "stations" following the same format
-      ];
+    var playlist = [
+      {
+        name: 'Ghost',
+        artist: 'Internet Child',
+        url: 'dnb.mp3',
+        cover: 'aOYd0JMr0CnEPDinqfKE--1--c3x2d.jpg',
+        votes: 0,
+      },
+      {
+        name: 'Function',
+        artist: 'Internet Child',
+        url: 'kast.mp3',
+        cover: 'DJ logo Photo.jpg',
+        votes: 0,
+      },
+      {
+        name: 'Throw some Ds',
+        artist: 'Internet Child',
+        url: 'Throw Some Ds- Track 1.mp3',
+        cover: 'DJ logo Photo.jpg',
+        votes: 0,
+      },
+      // Add more "stations" following the same format
+    ];
 
-      // Populate the vote dropdown with song names
-      playlist.forEach(function(song, index) {
-        var option = document.createElement("option");
-        option.value = index;
-        option.textContent = song.name;
-        voteDropdown.appendChild(option);
-      });
-
-      voteDropdown.addEventListener("change", function() {
-        var selectedIndex = voteDropdown.value;
-        if (selectedIndex !== "") {
-          voteForTrack(selectedIndex);
-        }
-      });
-
-      playlist.forEach(function(song, index) {
-        var button = document.createElement("button");
-        button.textContent = song.name;
-        button.addEventListener("click", function() {
-          musicPlayer.src = song.url;
-        });
-        playlistButtonsContainer.appendChild(button);
-      });
-
-      musicPlayer.addEventListener("ended", function() {
-        var currentIndex = playlist.findIndex(function(item) {
-          return item.url === musicPlayer.currentSrc;
-        });
-
-        var nextIndex = (currentIndex + 1) % playlist.length;
-
-        musicPlayer.src = playlist[nextIndex].url;
-      });
-
-      // Check if music is initially playing
-      if (!musicPlayer.paused) {
-        startAnimation();
-      }
+    // Populate the vote dropdown with song names
+    playlist.forEach(function(song, index) {
+      var option = document.createElement("option");
+      option.value = index;
+      option.textContent = song.name;
+      voteDropdown.appendChild(option);
     });
 
-    function openApp(app) {
-      var radioApp = document.getElementById("radioApp");
-      var desktop = document.querySelector(".desktop");
-      var musicPlayerContainer = document.getElementById("musicPlayerContainer");
-      var visualizerContainer = document.getElementById("visualizer-container");
-
-      if (app === 'radio') {
-        radioApp.style.display = 'block';
-        desktop.style.display = 'none';
-        musicPlayerContainer.style.display = 'block';
-        visualizerContainer.style.zIndex = '-1'; // Send visualizer to the background
-        startAnimation();
-      } else if (app === 'browser') {
-        alert('Error: This is a simulation. The browser is not functional.');
-      } else if (app === 'calculator') {
-        alert('Error: This is a simulation. The calculator is not functional.');
+    voteDropdown.addEventListener("change", function() {
+      var selectedIndex = voteDropdown.value;
+      if (selectedIndex !== "") {
+        voteForTrack(selectedIndex);
       }
-      // Add more app functionality as needed
-    }
-
-    function backToMainPage() {
-      var radioApp = document.getElementById("radioApp");
-      var desktop = document.querySelector(".desktop");
-      var musicPlayerContainer = document.getElementById("musicPlayerContainer");
-      var visualizerContainer = document.getElementById("visualizer-container");
-
-      radioApp.style.display = 'none';
-      desktop.style.display = 'grid';
-      musicPlayerContainer.style.display = 'none';
-      stopAnimation();
-    }
-
-    function startAnimation() {
-      // Start moving icons and show visualizer
-      document.querySelectorAll(".moving-icon, .music-icon").forEach(function(icon) {
-        icon.style.animation = "moveIcon 5s linear infinite alternate";
-        icon.style.display = "block";
-      });
-
-      document.getElementById("visualizer-container").style.zIndex = "1"; // Bring visualizer to the foreground
-    }
-
-    function stopAnimation() {
-      // Stop moving icons and hide visualizer
-      document.querySelectorAll(".moving-icon, .music-icon").forEach(function(icon) {
-        icon.style.animation = "none";
-        icon.style.display = "none";
-      });
-
-      document.getElementById("visualizer-container").style.zIndex = "-1"; // Send visualizer to the background
-    }
+    });
 
     function voteForTrack(index) {
       var selectedOption = document.getElementById("voteDropdown").options[index];
       var selectedIndex = selectedOption.value;
 
-      // Check if the user has already voted for this song
-      if (selectedOption.disabled) {
-        alert('You can only vote for each song once.');
-      } else {
-        // Increment the vote count and disable the option
-        playlist[selectedIndex].votes++;
-        selectedOption.disabled = true;
+      // Increment the vote count
+      playlist[selectedIndex].votes++;
 
-        // Update the vote count in the list
-        document.getElementById(`voteCount-${selectedIndex}`).textContent = playlist[selectedIndex].votes;
+      // Update the vote count in the list
+      document.getElementById(`voteCount-${selectedIndex}`).textContent = playlist[selectedIndex].votes;
 
-        // Display the vote in the list
-        var voteListItem = document.createElement("li");
-        voteListItem.innerHTML = `<strong>${playlist[selectedIndex].name}:</strong> ${playlist[selectedIndex].votes} votes`;
-        voteList.appendChild(voteListItem);
-      }
+      // Display the vote in the list
+      var voteListItem = document.createElement("li");
+      voteListItem.innerHTML = `<strong>${playlist[selectedIndex].name}:</strong> ${playlist[selectedIndex].votes} votes`;
+      voteList.appendChild(voteListItem);
+
+      // Check for the song with the highest votes
+      var highestVotes = -1;
+      var highestVotesIndex = -1;
+
+      playlist.forEach(function(song, index) {
+        if (song.votes > highestVotes) {
+          highestVotes = song.votes;
+          highestVotesIndex = index;
+        }
+      });
+
+      // Display the song with the highest votes
+      highestVotesContainer.textContent = `Song with the highest votes: ${playlist[highestVotesIndex].name} (${highestVotes} votes)`;
     }
   </script>
 </body>
