--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Windows 98 Radio Station</title>
+  <title>Internet Child</title>
 
   <style>
     /* Windows 98 desktop styles */
@@ -169,7 +169,7 @@
 
   <div id="radioApp">
     <button id="backButton" onclick="backToMainPage()">
-      <img src="YOUR_ARROW_URL_HERE" alt="Back Arrow">
+      <img src="Icons8-Ios7-Arrows-Back.48.png" alt="Back Arrow">
     </button>
 
     <div id="votingContainer">
