--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Internet Child</title>
+  <title>Windows 98 Radio Station</title>
 
   <style>
     /* Windows 98 desktop styles */
@@ -120,31 +120,6 @@
         transform: translateY(-20px);
       }
     }
-
-    /* Voting system styles */
-    #votingContainer {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      text-align: left;
-      color: #fff;
-      z-index: 4; /* Bring voting system to the foreground */
-    }
-
-    #voteList {
-      list-style-type: none;
-      padding: 0;
-    }
-
-    #voteDropdown {
-      margin-top: 10px;
-      margin-right: 10px;
-    }
-
-    #highestVotes {
-      margin-top: 10px;
-      font-weight: bold;
-    }
   </style>
 </head>
 <body>
@@ -172,15 +147,6 @@
       <img src="Icons8-Ios7-Arrows-Back.48.png" alt="Back Arrow">
     </button>
 
-    <div id="votingContainer">
-      <h2>Votes</h2>
-      <select id="voteDropdown">
-        <option value="" disabled selected>Select a song to vote</option>
-      </select>
-      <ul id="voteList"></ul>
-      <div id="highestVotes"></div>
-    </div>
-
     <div id="visualizer-container">
       <div id="visualizer"></div>
       <div class="moving-icon">🎵</div>
@@ -202,78 +168,108 @@
   </div>
 
   <script>
-    var voteList = document.getElementById("voteList");
-    var voteDropdown = document.getElementById("voteDropdown");
-    var highestVotesContainer = document.getElementById("highestVotes");
+    document.addEventListener("DOMContentLoaded", function() {
+      var musicPlayer = document.getElementById("musicPlayer");
+      var playlistButtonsContainer = document.getElementById("playlistButtons");
+      var visualizerContainer = document.getElementById("visualizer-container");
 
-    var playlist = [
-      {
-        name: 'Ghost',
-        artist: 'Internet Child',
-        url: 'dnb.mp3',
-        cover: 'aOYd0JMr0CnEPDinqfKE--1--c3x2d.jpg',
-        votes: 0,
-      },
-      {
-        name: 'Function',
-        artist: 'Internet Child',
-        url: 'kast.mp3',
-        cover: 'DJ logo Photo.jpg',
-        votes: 0,
-      },
-      {
-        name: 'Throw some Ds',
-        artist: 'Internet Child',
-        url: 'Throw Some Ds- Track 1.mp3',
-        cover: 'DJ logo Photo.jpg',
-        votes: 0,
-      },
-      // Add more "stations" following the same format
-    ];
+      var playlist = [
+        {
+          name: 'Ghost',
+          artist: 'Internet Child',
+          url: 'Ghost.mp3',
+          cover: 'aOYd0JMr0CnEPDinqfKE--1--c3x2d.jpg',
+        },
+        {
+          name: 'Function',
+          artist: 'Internet Child',
+          url: 'kast.mp3',
+          cover: 'DJ logo Photo.jpg',
+        },
+        {
+          name: 'Throw some Ds',
+          artist: 'Internet Child',
+          url: 'Throw Some Ds- Track 1.mp3',
+          cover: 'DJ logo Photo.jpg',
+        },
+        // Add more "stations" following the same format
+      ];
 
-    // Populate the vote dropdown with song names
-    playlist.forEach(function(song, index) {
-      var option = document.createElement("option");
-      option.value = index;
-      option.textContent = song.name;
-      voteDropdown.appendChild(option);
-    });
+      playlist.forEach(function(song, index) {
+        var button = document.createElement("button");
+        button.textContent = song.name;
+        button.addEventListener("click", function() {
+          musicPlayer.src = song.url;
+        });
+        playlistButtonsContainer.appendChild(button);
+      });
 
-    voteDropdown.addEventListener("change", function() {
-      var selectedIndex = voteDropdown.value;
-      if (selectedIndex !== "") {
-        voteForTrack(selectedIndex);
+      musicPlayer.addEventListener("ended", function() {
+        var currentIndex = playlist.findIndex(function(item) {
+          return item.url === musicPlayer.currentSrc;
+        });
+
+        var nextIndex = (currentIndex + 1) % playlist.length;
+
+        musicPlayer.src = playlist[nextIndex].url;
+      });
+
+      // Check if music is initially playing
+      if (!musicPlayer.paused) {
+        startAnimation();
       }
     });
 
-    function voteForTrack(index) {
-      var selectedOption = document.getElementById("voteDropdown").options[index];
-      var selectedIndex = selectedOption.value;
+    function openApp(app) {
+      var radioApp = document.getElementById("radioApp");
+      var desktop = document.querySelector(".desktop");
+      var musicPlayerContainer = document.getElementById("musicPlayerContainer");
+      var visualizerContainer = document.getElementById("visualizer-container");
 
-      // Increment the vote count
-      playlist[selectedIndex].votes++;
+      if (app === 'radio') {
+        radioApp.style.display = 'block';
+        desktop.style.display = 'none';
+        musicPlayerContainer.style.display = 'block';
+        visualizerContainer.style.zIndex = '-1'; // Send visualizer to the background
+        startAnimation();
+      } else if (app === 'browser') {
+        alert('Error: This is a simulation. The browser is not functional.');
+      } else if (app === 'calculator') {
+        alert('Error: This is a simulation. The calculator is not functional.');
+      }
+      // Add more app functionality as needed
+    }
 
-      // Update the vote count in the list
-      document.getElementById(`voteCount-${selectedIndex}`).textContent = playlist[selectedIndex].votes;
+    function backToMainPage() {
+      var radioApp = document.getElementById("radioApp");
+      var desktop = document.querySelector(".desktop");
+      var musicPlayerContainer = document.getElementById("musicPlayerContainer");
+      var visualizerContainer = document.getElementById("visualizer-container");
 
-      // Display the vote in the list
-      var voteListItem = document.createElement("li");
-      voteListItem.innerHTML = `<strong>${playlist[selectedIndex].name}:</strong> ${playlist[selectedIndex].votes} votes`;
-      voteList.appendChild(voteListItem);
+      radioApp.style.display = 'none';
+      desktop.style.display = 'grid';
+      musicPlayerContainer.style.display = 'none';
+      stopAnimation();
+    }
 
-      // Check for the song with the highest votes
-      var highestVotes = -1;
-      var highestVotesIndex = -1;
-
-      playlist.forEach(function(song, index) {
-        if (song.votes > highestVotes) {
-          highestVotes = song.votes;
-          highestVotesIndex = index;
-        }
+    function startAnimation() {
+      // Start moving icons and show visualizer
+      document.querySelectorAll(".moving-icon, .music-icon").forEach(function(icon) {
+        icon.style.animation = "moveIcon 5s linear infinite alternate";
+        icon.style.display = "block";
       });
 
-      // Display the song with the highest votes
-      highestVotesContainer.textContent = `Song with the highest votes: ${playlist[highestVotesIndex].name} (${highestVotes} votes)`;
+      document.getElementById("visualizer-container").style.zIndex = "1"; // Bring visualizer to the foreground
+    }
+
+    function stopAnimation() {
+      // Stop moving icons and hide visualizer
+      document.querySelectorAll(".moving-icon, .music-icon").forEach(function(icon) {
+        icon.style.animation = "none";
+        icon.style.display = "none";
+      });
+
+      document.getElementById("visualizer-container").style.zIndex = "-1"; // Send visualizer to the background
     }
   </script>
 </body>
