--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
           cover: 'aOYd0JMr0CnEPDinqfKE--1--c3x2d.jpg',
         },
         {
-          name: 'Function',
+          name: 'Granular Synthesis',
           artist: 'Internet Child',
-          url: 'kast.mp3',
+          url: 'Granular Synthesis.mp3',
           cover: 'DJ logo Photo.jpg',
         },
         {
