--- a/index.html
+++ b/index.html
@@ -177,19 +177,19 @@
         {
           name: 'Ghost',
           artist: 'Internet Child',
-          url: 'Ghost.mp3',
+          url: 'Ghost (Mastered with Aurora at 50pct).mp3',
           cover: 'aOYd0JMr0CnEPDinqfKE--1--c3x2d.jpg',
         },
         {
           name: 'Granular Synthesis',
           artist: 'Internet Child',
-          url: 'Granular Synthesis.mp3',
+          url: 'Granular Synthesis (Mastered with Thunder at 50pct).mp3',
           cover: 'DJ logo Photo.jpg',
         },
         {
-          name: 'Throw some Ds',
+          name: 'Cyber Synthesis',
           artist: 'Internet Child',
-          url: 'Throw Some Ds- Track 1.mp3',
+          url: 'Cyber Synthesis (Mastered with Thunder at 50pct).mp3',
           cover: 'DJ logo Photo.jpg',
         },
         // Add more "stations" following the same format
